--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,8 @@ jobs:
           command: |
              cd frontend
              npm install
-             npm audit fix --force --audit-level=critical 
+             npm audit fix --force --audit-level=critical
+             npm audit fix --audit-level=critical --force
              npm audit --audit-level=critical
 
   scan-backend:
