--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,15 @@
 version: 2.1
 
+orbs: 
+  slack: circleci/slack@4.10.1
+
 # commands:
+notify_while_failure:
+    steps:
+      - slack/notify:
+          event: fail
+          channel: $SLACK_DEFAULT_CHANNEL
+          template: basic_fail_1
 #   destroy-environment:
 #     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
 #     parameters:
@@ -49,6 +58,7 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
+      - notify_while_failure
 
 
   build-backend:
@@ -64,10 +74,10 @@ jobs:
              cd backend
              npm install
              npm run build
-
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
+      - notify_while_failure
 
   test-frontend:
     docker:
@@ -82,6 +92,7 @@ jobs:
             cd frontend
             npm install
             npm test
+      - notify_while_failure
      
                 
   test-backend:
@@ -97,6 +108,7 @@ jobs:
              cd backend
              npm install
              npm test
+      - notify_while_failure
             
   scan-frontend:
     docker:
@@ -113,6 +125,7 @@ jobs:
              npm audit fix --force --audit-level=critical
              npm audit fix --audit-level=critical --force
              npm audit --audit-level=critical
+      - notify_while_failure
 
   scan-backend:
     docker:
@@ -129,6 +142,7 @@ jobs:
              npm audit fix --audit-level=critical --force
              npm audit fix --audit-level=critical --force
              npm audit --audit-level=critical
+      - notify_while_failure
 
 #   deploy-infrastructure:
 #     docker:
