--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,7 +177,7 @@ jobs:
       - image: cimg/base:Stable
     steps:
        - checkout
-       install_awscli
+       - install_awscli
       - run:
           name: Ensure back-end infrastructure exists
           command: |
