--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ commands:
     steps:
       -run:
         name: Install AWS CLI V2
-        Command: 
+        Command: |
            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
            unzip awscliv2.zip
            sudo ./aws/install
@@ -20,7 +20,7 @@ commands:
       steps:
         -run:
           name: Install Ansible
-          Command: 
+          Command: |
               sudo apt update
               sudo apt install software-properties-common
               sudo add-apt-repository --yes --update ppa:ansible/ansible
