--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,12 @@ orbs:
 
 commands:
   
-notify_while_failure:
-    steps:
-      - slack/notify:
-          event: fail
-          channel: $SLACK_DEFAULT_CHANNEL
-          template: basic_fail_1
+# notify_while_failure:
+#     steps:
+#       - slack/notify:
+#           event: fail
+#           channel: $SLACK_DEFAULT_CHANNEL
+#           template: basic_fail_1
 
 
 
