--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,7 +172,7 @@ jobs:
         - image: cimg/base:Stable
       steps:
         - checkout
-        - install_awscli
+        - install-awscli
         - run:
             name: Ensure back-end infrastructure exists
             command: |
